# pose-emotion-detector

./: README.md  evaluate.py  requirements.txt  train.py  train_emotion.py
checkpoints/: best_model_checkpoint_onnx_fp16.onnx
cpp/: CMakeLists.txt  bindings.cpp  main.cpp
utils/: emotion_api.py  emotion_model_api.py  emotion_pose_model.py  haar_detector.py  pose_model_api.py  yolo_detector.py
